# swagger/swagger.yml
@@ -328,6 +328,131 @@ paths:
             $ref: '#/definitions/models.Service_requests'
         "403":
           description: body is empty
+  /clients/:
+    get:
+      tags:
+      - clients
+      description: |-
+        get Clients
+        <br>
+      operationId: ClientsController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Clients'
+        "403":
+          description: ""
+    post:
+      tags:
+      - clients
+      description: |-
+        create Clients
+        <br>
+      operationId: ClientsController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for Clients content
+        required: true
+        schema:
+          $ref: '#/definitions/requests.AddClientRequest'
+      responses:
+        "201":
+          description: '{int} models.Clients'
+        "403":
+          description: body is empty
+  /clients/{id}:
+    get:
+      tags:
+      - clients
+      description: |-
+        get Clients by id
+        <br>
+      operationId: ClientsController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Clients'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - clients
+      description: |-
+        update the Clients
+        <br>
+      operationId: ClientsController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Clients content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Clients'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Clients'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - clients
+      description: |-
+        delete the Clients
+        <br>
+      operationId: ClientsController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
 definitions:
   models.Client_services:
     title: Client_services
@@ -367,6 +492,8 @@ definitions:
       ClientCode:
         type: string
       ClientName:
+        type: string
+      ClientUrl:
         type: string
       CreatedBy:
         type: integer
@@ -550,3 +677,6 @@ tags:
 - name: api
   description: |
     Api requests
+- name: clients
+  description: |
+    ClientsController operations for Clients
